index.css
/* ... */
@media (min-width: 1024px) {
  .home-page {
    background-image: url(./assets/home/background-home-desktop.jpg);
  }

  .destination-page {
    background-image: url(./assets/destination/background-destination-desktop.jpg);
  }

  .crew-page {
    background-image: url(./assets/crew/background-crew-desktop.jpg);
  }
}

/* destination page */

.grid-container--destination {
  --flow-space: 2rem;
  margin-bottom: 3rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.grid-container--destination > img {
  grid-area: image;
  width: 60%;
}

.grid-container--destination .tab-items {
  grid-area: tabs;
}

.grid-container--destination > .destination-info {
  grid-area: content;
}

.grid-container--destination > img {
  width: 40%;
}

.destination-stats {
  --gap: 1.5rem;
  flex-direction: column;
  padding-top: 1.5rem;
  margin-top: 1.5rem;
  border-top: 1px solid hsl(var(--clr-white) / 0.25);
}

.destination-stats p {
  font-size: 1.75rem;
}

@media (min-width: 768px) {
  .grid-container--destination .numbered-title {
    justify-self: start;
    margin-top: 2rem;
  }

  .destination-stats {
    flex-direction: row;
    justify-content: space-evenly;
  }
}

@media (min-width: 1024px) {
  .grid-container--destination {
    justify-items: start;
    align-content: start;
    grid-template-areas:
    ". title title ."
    ". image tabs ."
    ". image content .";
  }

  .grid-container--destination > img {
    width: 80%;
  }

  .destination-stats {
    --gap: 6rem;
    justify-content: flex-start;
  }
}

/* home page */

.home-page main h1 > span {
  margin-block: 2rem;
}

/* crew page */

.grid-container--crew {
  padding: 2.5rem 2.5rem 0 2.5rem;
  grid-template-areas:
  "title"
  "info"
  "pagination"
  "image";
}

.grid-container--crew > h1 {
  grid-area: title;
}

.crew-info {
  grid-area: info;
}

.crew-member-description {
  margin-block: 2rem;
}

.grid-container--crew > .pagination-indicators {
  grid-area: pagination;
}

.crew-info p {
  max-width: 58ch;
}

.crew-info h2 {
  color: hsl(var(--clr-white) / 0.5);
}

.grid-container--crew > img {
  grid-area: image;
  position: relative;
  align-self: end;
  max-width: 85%;
}

.grid-container--crew > img:after {
  content: ""; 
  position: absolute; 
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
  height: 40%;
}

@media (min-width: 768px) {

  .grid-container--crew > h1 {
    justify-self: start;
  }

  .grid-container--crew > img {
    max-width: 60%;
  }
}

@media (min-width: 1024px) {
  .grid-container--crew {
    grid-template-areas: 
      '. title title . '
      '. info image . '
      '. pagination image . '
  }

  .grid-container--crew > .pagination-indicators {
    justify-self: start;
    gap: 2.5rem;
    padding-bottom: 2rem;
  }

  .grid-container--crew > img {
    max-width: 95%;
  }
}

/* technology page */

.grid-container--technology {
  margin-block: 1.5rem 4rem;
  grid-template-areas:
  "title"
  "info"
  "pagination"
  "image";
}

.grid-container--technology > h1 {
  grid-area: title;
}

.technology-info {
  grid-area: info;
}

.technology-info h2 {
  color: hsl(var(--clr-white) / 0.5);
}

.technology-info p {
  max-width: 58ch;
}

.technology-description {
  margin-block: 2rem;
}

.grid-container--technology > .pagination-indicators {
  grid-area: pagination;
}

.launch-vehicle-portrait,
.launch-vehicle-landscape {
  grid-area: image;
}

.launch-vehicle-portrait {
  display: none;
}

@media (min-width: 768px) {
  .grid-container--technology > h1 {
    justify-self: start;
  }
}

@media (min-width: 1024px) {
  .grid-container--technology {
    grid-template-areas: 
      '. title title . '
      '. info image . '
      '. pagination image . '
  }

  .grid-container--technology > .pagination-indicators {
    justify-self: start;
    gap: 2.5rem;
    padding-bottom: 2rem;
  }

  .launch-vehicle-portrait {
    display: block;
    grid-column: span 2;
  }

  .launch-vehicle-landscape {
    display: none;
  }
}

